              Agnès Chounet <chounet@ipgp.fr>
(c) 2015-2017 Claudio Satriano <satriano@ipgp.fr>

v0.9 - 2017-03-XX
	- Support for QuakeML and StationXML
	- Support for Python 3.5
	- Only compatible with ObsPy >= 1.0.0
	- Project reorganization:
		- Project renamed to SourceSpec
		- ssp_residuals renamed to source_residuals
		- New installable package (e.g., via pip)
	- Traces are filtered before computing S/N ratio
	- Trace clipping detection
	- Traces are always plotted, even if no inversion is performed
	- Use by default a global model for theoretical travel time calculation
  - Possibility of using NonLinLoc travel time grids (requires nllgrid)
	- New options for P and S arrival time tolerance
	- New option for maximum epicentral distance for trace processing
  - Possibility of using a NonLinLoc model grid for obtaining vs at the
    source and at the receiver (requires nllgrid)
	- Use log10 of weighting function, since the inversion is done in
		mangitude units
	- Use json format for traceid correction file
	- Save config file to output dir (only for source_spec)
	- Logarithmic average and logarithmic (asymmetric) error bars for Mo, fc
		and source radius
  - Computation of radiated energy
  - Station-specific filters
  - New parameters: gap_max, overlap_max
	- Code cleaning and optimization:
		- Switch from optparse (deprecated) to argparse
		- Code style fixes and refactoring
	- BUGFIX: Fix a major bug in reading hypo pick file
	- BUGFIX: Fix for pick file not read in source_model
v0.8 - 2014-07-11
	- Trace plot showing S and noise time windows
	- Improved handling of paz files
	- Per-station Mo on output file
	- Code cleaning and optimization
v0.7 - 2014-04-07
	- Code reorganization:
		- inversion code split to its own functions
	- Option to use bounded inversion
	- Station residuals, through ssp_residuals.py
	- source_model can now output tables of trade-off
		between parameters
	- Fix in the way noise trace is computed and processed
	- Documentation!