@@ -155,13 +155,13 @@ freq2_broadb  = float(default=30.0)
 
 
 # INVERSION PARAMETERS --------
-# spectral weighting:
+# weighting type
+weighting = option('noise', 'frequency', None, default='noise')
+# parameters for frequency weighting:
 #   weight for f<=f_weight
 #   1      for f> f_weight
 f_weight = float(default=7.) #Hz
 weight = float(default=10.)
-# use noise weighting
-noise_weighting = boolean(default=False)
 norm_weight_integral_min = float(default=None)
 # spectral S/N ratio min,
 # below which a spectrum will be skipped
