@@ -21,8 +21,8 @@ import logging
 import math
 import numpy as np
 from scipy.optimize import curve_fit, minimize
+from scipy.signal import argrelmax
 from obspy.geodetics import gps2dist_azimuth
-from sourcespec.ssp_setup import dprint
 from sourcespec.ssp_spectral_model import (spectral_model, objective_func,
                                            callback)
 from sourcespec.ssp_util import mag_to_moment, select_trace
@@ -63,12 +63,7 @@ class Bounds():
                 self._check_minmax(config.t_star_min_max)
         else:
             self.t_star_min, self.t_star_max = self._Qo_to_t_star()
-        self.bounds = ((self.Mw_min, self.Mw_max),
-                       (self.fc_min, self.fc_max),
-                       (self.t_star_min, self.t_star_max))
-        self.params_min = (self.Mw_min, self.fc_min, self.t_star_min)
-        self.params_max = (self.Mw_max or 1e300, self.fc_max or 1e300,
-                           self.t_star_max or 1e300)
+        self.set_bounds()
         self._fix_initial_values()
 
     def __str__(self):
@@ -134,6 +129,14 @@ class Bounds():
         tmax = bool(np.all(params <= self.params_max))
         return tmin and tmax
 
+    def set_bounds(self):
+        self.bounds = ((self.Mw_min, self.Mw_max),
+                       (self.fc_min, self.fc_max),
+                       (self.t_star_min, self.t_star_max))
+        self.params_min = (self.Mw_min, self.fc_min, self.t_star_min)
+        self.params_max = (self.Mw_max or 1e300, self.fc_max or 1e300,
+                           self.t_star_max or 1e300)
+
     def get_bounds(self):
         """Get bounds for minimize()."""
         return self.bounds
@@ -150,10 +153,12 @@ class Bounds():
 
 def spectral_inversion(config, spec_st, weight_st, Ml):
     """Inversion of displacement spectra."""
-    if config.noise_weighting:
+    if config.weighting == 'noise':
         logging.info('Using noise weighting for inversion.')
-    else:
+    elif config.weighting == 'frequency':
         logging.info('Using frequency weighting for inversion.')
+    elif config.weighting is None:
+        logging.info('Using no weighting for inversion.')
     if config.inv_algorithm == 'TNC':
         logging.info('Using truncated Newton algorithm for inversion.')
     elif config.inv_algorithm == 'LM':
@@ -170,31 +175,6 @@ def spectral_inversion(config, spec_st, weight_st, Ml):
         for spec in spec_st_sel.traces:
             if spec.stats.channel[2] != 'H':
                 continue
-            dprint(station)
-
-            # spectral amplitude is in Mw units
-            amp = spec.data_mag
-
-            # We calculate the initial value for Mw,
-            # as an average of the first 5 values of amp
-            Mw_0 = amp[0:5].mean()
-
-            # We try to retrieve fc_0 from the configuration...
-            fc_0 = config.fc_0
-            # ...if it is not available, we calculate it
-            if fc_0 is None:
-                log_m0 = math.log10(mag_to_moment(Mw_0))
-                log_beta = math.log10(config.hypo.vs*1000.)
-                log_bsd = math.log10(config.bsd)
-                log_fc = log_bsd - log_m0 + 3*log_beta - 0.935
-                log_fc /= 3.
-                fc_0 = math.pow(10, log_fc)
-                logging.info('%s fc_0 autoset to: %.2f' % (spec.id, fc_0))
-
-            # initial value for t_star
-            t_star_0 = config.t_star_0
-
-            hd = spec.stats.hypo_dist
 
             # azimuth computation
             coords = spec.stats.coords
@@ -205,40 +185,73 @@ def spectral_inversion(config, spec_st, weight_st, Ml):
             evlo = hypo.longitude
             geod = gps2dist_azimuth(evla, evlo, stla, stlo)
             az = geod[1]
-            dprint('%s %s %f %f' % (station, spec.stats.instrtype, hd, az))
 
-            params_name = ('Mw', 'fc', 't_star')
-            initial_values = InitialValues(Mw_0, fc_0, t_star_0)
+            freq = spec.get_freq()
+            freq_log = spec.freq_log
+            ydata = spec.data_log_mag
 
-            xdata = spec.get_freq()
-            ydata = amp
-
-            if config.noise_weighting:
-                weight = select_trace(weight_st, spec.id, spec.stats.instrtype)
+            noise_weight = select_trace(
+                weight_st, spec.id, spec.stats.instrtype)
+            noise_weight = noise_weight.data_log
+            if config.weighting == 'noise':
+                weight = noise_weight
                 # 'curve_fit' interprets 'yerr' as standard deviation vector
                 # and calculates weights as 1/yerr^2 .
                 # Therefore we build yerr as:
                 yerr = 1./np.sqrt(weight)
-            else:
-                # Spectral weighting:
+            elif config.weighting == 'frequency':
+                # frequency weighting:
                 #   config.weight for f<=f_weight
                 #   1      for f> f_weight
                 yerr = np.ones(len(ydata))
-                yerr[xdata <= config.f_weight] = 1./math.sqrt(config.weight)
+                yerr[freq_log <= config.f_weight] = 1./math.sqrt(config.weight)
                 weight = 1./np.power(yerr, 2)
+            elif config.weighting is None:
+                weight = yerr = np.ones(len(ydata))
+
+            # Find the frequency range to compute Mw_0:
+            # we start where signal-to-noise becomes strong
+            idx0 = np.where(noise_weight > 0.5)[0][0]
+            # we stop at the first max of signal-to-noise (proxy for fc)
+            idx_max = argrelmax(noise_weight)[0]
+            # just keep the indexes for maxima > 0.5
+            idx_max = [idx for idx in idx_max if noise_weight[idx] > 0.5]
+            idx1 = idx_max[0]
+
+            # We calculate the initial value for Mw as an average
+            Mw_0 = np.nanmean(ydata[idx0: idx1])
+            # We try to retrieve fc_0 from the configuration...
+            fc_0 = config.fc_0
+            # ...if it is not available, we calculate it
+            if fc_0 is None:
+                # fc_0 = freq_log[idx1]
+                log_m0 = math.log10(mag_to_moment(Mw_0))
+                log_beta = math.log10(config.hypo.vs*1000.)
+                log_bsd = math.log10(config.bsd)
+                log_fc = log_bsd - log_m0 + 3*log_beta - 0.935
+                log_fc /= 3.
+                fc_0 = math.pow(10, log_fc)
+                logging.info('%s fc_0 autoset to: %.2f' % (spec.id, fc_0))
+            # initial value for t_star
+            t_star_0 = config.t_star_0
+            initial_values = InitialValues(Mw_0, fc_0, t_star_0)
+            logging.info('%s %s: initial values: %s' %
+                         (spec.id, spec.stats.instrtype,
+                          str(initial_values)))
+
+            bounds = Bounds(config, spec, initial_values)
+            bounds.Mw_min = Mw_0 - 0.1
+            bounds.Mw_max = Mw_0 + 0.1
+            bounds.set_bounds()
+            logging.info('%s %s: bounds: %s' %
+                         (spec.id, spec.stats.instrtype, str(bounds)))
 
             # Curve fitting using "curve_fit()" (Levenberg-Marquardt algorithm
             # if no bounds or Trust Region Reflective algorithm if bounds)
             # or the truncated Newton algorithm (TNC) with bounds.
-            logging.info('%s %s: initial values: %s' %
-                         (spec.id, spec.stats.instrtype,
-                          str(initial_values)))
-            bounds = Bounds(config, spec, initial_values)
-            logging.info('%s %s: bounds: %s' %
-                         (spec.id, spec.stats.instrtype, str(bounds)))
             try:
                 if config.inv_algorithm == 'TNC':
-                    minimize_func = objective_func(xdata, ydata, weight)
+                    minimize_func = objective_func(freq_log, ydata, weight)
                     res =\
                         minimize(minimize_func,
                                  x0=initial_values.get_params0(), method='TNC',
@@ -246,7 +259,7 @@ def spectral_inversion(config, spec_st, weight_st, Ml):
                     params_opt = res.x
                     # trick: use curve_fit() bounded to params_opt
                     # to get the covariance
-                    _, params_cov = curve_fit(spectral_model, xdata, ydata,
+                    _, params_cov = curve_fit(spectral_model, freq_log, ydata,
                                               p0=params_opt, sigma=yerr,
                                               bounds=(params_opt-(1e-10),
                                                       params_opt+(1e-10)))
@@ -261,13 +274,13 @@ def spectral_inversion(config, spec_st, weight_st, Ml):
                                      'Trust Region Reflective algorithm.')
                     params_opt, params_cov =\
                         curve_fit(spectral_model,
-                                  xdata, ydata,
+                                  freq_log, ydata,
                                   p0=initial_values.get_params0(),
                                   sigma=yerr,
                                   bounds=bounds.get_bounds_curve_fit())
                 elif config.inv_algorithm == 'BH':
                     from scipy.optimize import basinhopping
-                    minimize_func = objective_func(xdata, ydata, weight)
+                    minimize_func = objective_func(freq_log, ydata, weight)
                     res = basinhopping(minimize_func,
                                        x0=initial_values.get_params0(),
                                        niter=100, accept_test=bounds)
@@ -277,9 +290,10 @@ def spectral_inversion(config, spec_st, weight_st, Ml):
                                 (spec.id, spec.stats.instrtype))
                 continue
 
+            params_name = ('Mw', 'fc', 't_star')
             par = dict(zip(params_name, params_opt))
             par['Mo'] = mag_to_moment(par['Mw'])
-            par['hyp_dist'] = hd
+            par['hyp_dist'] = spec.stats.hypo_dist
             par['az'] = az
             par['Ml'] = Ml  # FIXME: this is the network magnitude!
 
@@ -294,7 +308,7 @@ def spectral_inversion(config, spec_st, weight_st, Ml):
             spec_synth.stats.channel = spec.stats.channel[0:2] + 'S'
             spec_synth.stats.par = par
             spec_synth.stats.par_err = par_err
-            spec_synth.data_mag = spectral_model(xdata, *params_opt)
+            spec_synth.data_mag = spectral_model(freq, *params_opt)
             spec_synth.data = mag_to_moment(spec_synth.data_mag)
             spec_st.append(spec_synth)
 
@@ -303,7 +317,7 @@ def spectral_inversion(config, spec_st, weight_st, Ml):
                 spec_synth = spec.copy()
                 spec_synth.stats.channel = spec.stats.channel[0:2] + 's'
                 params_opt[-1] = 0
-                spec_synth.data_mag = spectral_model(xdata, *params_opt)
+                spec_synth.data_mag = spectral_model(freq, *params_opt)
                 spec_synth.data = mag_to_moment(spec_synth.data_mag)
                 spec_st.append(spec_synth)
 
