@@ -14,6 +14,9 @@ v0.9 - 2017-03-XX
 		- Project renamed to SourceSpec
 		- ssp_residuals renamed to source_residuals
 		- New installable package (e.g., via pip)
+  - Spectra are smoothed in log-freq (no more Konno-Ohmachi)
+  - Inversion is performed in a log-freq space
+  - Mw is inverted separately and then fixed
 	- Traces are filtered before computing S/N ratio
 	- Trace clipping detection
 	- Traces are always plotted, even if no inversion is performed
